Implemented stubs for API backend. Added GitHub workflow for build and tests
